<resources>
  <string name="app_name">Secure Bitcoin Wallet</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string name="empty_list">List is empty</string>
  <string name="activity_settings">Settings</string>

  <string name="error_pin_incorrect">Pin is incorrect</string>
  <string name="error_unknown">An unknown error has occurred</string>
  <string name="error_not_found">Oops, the thing you are looking for has not been found.</string>
  <string name="error_card_locked">The smartcard is locked. Please unlock it by using the PUK</string>
  <string name="error_applet_not_initialized">The applet has not been initialized yet.</string>
  <string name="error_keystore_full">The smartcard can\'t hold any more addresses. Free some space by exporting or deleting an address</string>
  <string name="error_smartcard_not_connected">Smartcard is not connected</string>


  <string name="menu_address_import">Import</string>
  <string name="menu_address_new">Create new</string>

  <string name="menu_transaction_send">Send Bitcoins</string>
  <string name="menu_transaction_receive">Receive Bitcoins</string>

  <string name="pref_lock">Lock Application</string>
  <string name="pref_lock_summ">Secure the application with a pincode</string>
  <string name="pref_lock_timeout">Lock Timeout</string>
  <string name="pref_lock_timeout_summ">Time in seconds until the application gets locked</string>


  <string name="activity_create_address">New Address</string>
  <string name="create_address_name">Address name</string>
  <string name="create_address_next_button">next</string>
  <string name="create_address_previous_button">back</string>
  <string name="create_address_successful">Address successfully created</string>
  <string name="create_address_description">Please enter a name for your new address. This name will
    be displayed in the app to identify this address. A public and private key will be generated in
    next step by entering the PIN for the secure SD card.
  </string>
  <string name="error_create_address_name_already_in_use">The desired address name is already
    used.
  </string>


  <string name="activity_create_transaction">Send Bitcoins</string>
  <string name="create_transaction_receiver_address">Payee</string>
  <string name="create_tranasction_bitcoins">Bitcoins (Satoshi)</string>
  <string name="create_transaction_subject">Reference</string>
  <string name="create_transaction_successful">Transaction successfully created</string>
  <string name="error_create_transaction_sender_no_address">An error has occurred. No Address
    specified!
  </string>

  <string name="share_address">Share Bitcoin Address</string>

  <string name="actionmode_delete">Delete</string>
  <string name="actionmode_edit">Edit</string>


  <string name="actionmode_delete_address_title">Delete address?</string>
  <string name="actionmode_delete_address_message">Are you sure that you want to delete this Address? All unspent Bitcoins will be deleted unrecoverable!\n\nPlease enter your PIN to proceed.</string>

  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="ok">Ok</string>

  <string name="actionmode_edit_address_title">Address name</string>
  <string name="actionmode_edit_address_empty_name">The name can not be empty!</string>
  <string name="error_invalid_address">Bitcoin address is invalid</string>

  <string name="notification_received">Bitcoins received</string>
  <string name="noticiations_details">Open to see details</string>

</resources>
